--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ body {
 }
 #create-dog-form input[type="submit"] {
   margin-top: 20px;
-  color: black;
+  color: #f2f2f2;
 }
 
 #create-dog-form input {
